More canvas fun

--- a/canvas-mini/index.html
+++ b/canvas-mini/index.html
@@ -8,10 +8,14 @@
     <style src='./canvas.css'></style>
 </head>
 <body>
-    <canvas id="tutorial" width="150" height="200" style='border: 1px solid black'>
+    <canvas id="tutorial" width="300" height="300" style='border: 1px solid black'>
         For browsers that don't support canvas
     </canvas>
-    <script src="./canvas.js">5 +5</script>
+    <script src="./canvas.js"></script>
+    <div style="display:none;">
+        <img id="source" src="https://mdn.mozillademos.org/files/5397/rhino.jpg" width="300" height="227">
+        <img id="frame" src="https://mdn.mozillademos.org/files/242/Canvas_picture_frame.png" width="132" height="150">
+    </div>
     Test test test
 </body>
 </html>
